Fix spacing in css

--- a/css/main.css
+++ b/css/main.css
@@ -23,26 +23,39 @@ section {
 div {
   display: inline-block;
   color: #333;
+  width: 100%;
   max-width: 25em;
-  margin: 1.5em;
+  padding-top: .4em;
 }
 
 div img {
   width: 100%;
+  padding: 1em 1em;
+  margin-top: 1.5em;
 }
 
 .text {
   text-align: left;
-  margin-top: 0;
+  padding: 0 1em 1em;
+  width: 100%;
+  max-width: 25em;
 }
 
 .giza {
-  margin-top: 0;
+  padding: .5em 0 1em 0;
+  margin: 0;
+  font-weight: 700;
 }
 
 .text div {
   text-align: left;
-  margin: 0;
+  margin-bottom: 1.5em;
+  max-width: 25em;
+}
+
+p {
+  margin: 0 0 1.5em 0;
+  width: 100%;
   max-width: 25em;
 }
 
@@ -54,6 +67,8 @@ div a {
   padding: .5em .75em;
   color: #333;
   text-decoration: none;
+  font-weight: 700;
+  font-size: 1em;
 }
 
 div a:hover {
